# example

./: pyproject.toml  test.py
src/rules/: __init__.py  _dto.py  _node.py  _unit.py  _window.py  tree.py
src/utils/: _cmp_kit.py  _metrics_kit.py  metrics_kit.py
