[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
    {name = "xueyu",email = "xueuy@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
